fixed: Auto capitalization is missing on Medications Screen, Profile, FAD search, and else where.

--- a/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
@@ -44,7 +44,7 @@
                 android:ellipsize="end"
                 android:hint="@string/member_id"
                 android:imeOptions="actionNext"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:maxLines="1"
                 android:singleLine="true" />
 
@@ -65,7 +65,7 @@
                 android:ellipsize="end"
                 android:hint="@string/group_id"
                 android:imeOptions="actionNext"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:maxLines="1"
                 android:singleLine="true" />
 
