--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -104,7 +104,7 @@
                         android:gravity="center_vertical"
                         android:hint="@string/search_hint"
                         android:imeOptions="actionSearch"
-                        android:inputType="text"
+                        android:inputType="textCapSentences"
                         android:longClickable="false"
                         android:padding="8dp"
                         android:scrollHorizontally="true" />
