--- a/MyHome/app/src/main/res/layout/fragment_medications.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medications.xml
@@ -35,7 +35,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/medication_search_hint"
                 android:imeOptions="actionSearch"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:longClickable="false"
                 android:padding="8dp"
                 android:scrollHorizontally="true" />
