--- a/MyHome/app/src/main/res/layout/fragment_secq.xml
+++ b/MyHome/app/src/main/res/layout/fragment_secq.xml
@@ -44,7 +44,7 @@
                 android:drawableRight="@mipmap/tooltip"
                 android:hint="@string/prompt_answer"
                 android:imeOptions="actionDone"
-                android:inputType="text"
+                android:inputType="textCapSentences"
                 android:lines="1"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
