--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -11,8 +11,8 @@
 
         <com.prokarma.myhome.views.CircularImageView
             android:id="@+id/doc_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -22,7 +22,7 @@
         <TextView
             android:id="@+id/provider_name"
             style="@style/tradeGothicLTStdLight_20"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/doc_image"
