--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -1,144 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/doc_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.prokarma.myhome.views.CircularImageView
-            android:id="@+id/doc_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="20dp"
-            android:scaleType="centerInside" />
+        <LinearLayout
+            android:id="@+id/summary_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/provider_name"
-            style="@style/tradeGothicLTStdLight_20"
+            <RelativeLayout
+                android:id="@+id/doc_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.prokarma.myhome.views.CircularImageView
+                    android:id="@+id/doc_image"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="20dp"
+                    android:scaleType="centerInside" />
+
+                <TextView
+                    android:id="@+id/provider_name"
+                    style="@style/tradeGothicLTStdLight_20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/doc_image"
+                    android:textStyle="bold"
+                    tools:text="Richard Paul, MD" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/end_description"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:text="@string/your_visit_has_ended" />
+
+            <TextView
+                android:id="@+id/cost_description"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:text="Your total cost for today's visit was $0.00" />
+
+            <TextView
+                android:id="@+id/pharmacy_name"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:textStyle="bold"
+                tools:text="Pharmacy Name" />
+
+            <TextView
+                android:id="@+id/pharmacy_address"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="10dp"
+                tools:text="Pharmacy Address" />
+
+            <TextView
+                android:id="@+id/pharmacy_distance"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="10dp"
+                tools:text="0.91 mi" />
+
+            <TextView
+                android:id="@+id/doctor_notes"
+                style="@style/tradeGothicLTStd_Dynamic18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:text="If your doctor is preparing additional information about your visit, you will be able to see it later in your Visit Summaries." />
+
+            <Button
+                android:id="@+id/view_report"
+                style="@style/primaryButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:text="View Visit Report"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/summary_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/doc_image"
-            tools:text="Richard Paul, MD"
-            android:textStyle="bold" />
-    </RelativeLayout>
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="8dp"
+            android:indeterminate="true"
+            android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/end_description"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/doc_layout"
-        android:layout_marginLeft="24dp"
-        android:text="@string/your_visit_has_ended" />
-
-    <TextView
-        android:id="@+id/cost_description"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@+id/end_description"
-        android:layout_marginTop="16dp"
-        android:text="Your total cost for today's visit was $0.00" />
-
-    <TextView
-        android:id="@+id/pharmacy_name"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@+id/cost_description"
-        android:layout_marginTop="16dp"
-        android:textStyle="bold"
-        tools:text="Pharmacy Name" />
-
-    <TextView
-        android:id="@+id/pharmacy_address"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@+id/pharmacy_name"
-        android:layout_marginTop="10dp"
-        tools:text="Pharmacy Address" />
-
-    <TextView
-        android:id="@+id/pharmacy_distance"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@+id/pharmacy_address"
-        android:layout_marginTop="10dp"
-        tools:text="0.91 mi" />
-
-    <TextView
-        android:id="@+id/doctor_notes"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/end_description"
-        android:layout_below="@+id/pharmacy_distance"
-        android:layout_marginTop="16dp"
-        android:text="If your doctor is preparing additional information about your visit, you will be able to see it later in your Visit Summaries." />
-
-    <Button
-        android:id="@+id/view_report"
-        style="@style/primaryButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/doctor_notes"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:text="View Visit Report"
-        android:textAllCaps="false" />
-
-    <!--<TextView-->
-        <!--android:id="@+id/email_me"-->
-        <!--style="@style/tradeGothicLTStd_Dynamic18"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignStart="@id/end_description"-->
-        <!--android:layout_below="@id/view_report"-->
-        <!--android:text="Email me a confidential summary" />-->
-
-    <!--<RelativeLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignStart="@id/end_description"-->
-        <!--android:layout_below="@id/email_me"-->
-        <!--android:orientation="horizontal">-->
-
-        <!--<CheckBox-->
-            <!--android:id="@+id/consent_checkbox"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
-
-        <!--<TextView-->
-            <!--style="@style/tradeGothicLTStd_Dynamic18"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_toRightOf="@id/consent_checkbox"-->
-            <!--android:text="I acknowledge I'm sending confidential medical information through unsecure email" />-->
-
-    <!--</RelativeLayout>-->
-
-    <ProgressBar
-        android:id="@+id/summary_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="8dp"
-        android:indeterminate="true"
-        android:visibility="gone" />
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
