--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -118,8 +118,8 @@
             android:id="@+id/summary_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="8dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="48dp"
             android:indeterminate="true"
             android:visibility="gone" />
 
