--- a/MyHome/app/src/main/res/layout/visit_feedback.xml
+++ b/MyHome/app/src/main/res/layout/visit_feedback.xml
@@ -98,8 +98,8 @@
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="8dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="48dp"
             android:indeterminate="true"
             android:visibility="gone" />
     </LinearLayout>
