--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="4dp"
                 tools:text="Pharmacy Address" />
 
             <TextView
@@ -88,8 +88,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="4dp"
                 tools:text="0.91 mi" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/prescriptions_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/pharmacy_distance"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/doctor_notes"
@@ -108,6 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
                 android:text="View Visit Report"
