--- a/MyHome/app/src/main/res/layout/prescription_item.xml
+++ b/MyHome/app/src/main/res/layout/prescription_item.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <TextView
         android:id="@+id/prescription_name"
