--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/summary_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -69,7 +69,8 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
                 android:textStyle="bold"
-                tools:text="Pharmacy Name" />
+                tools:text="Pharmacy Name"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/pharmacy_address"
@@ -79,7 +80,8 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                tools:text="Pharmacy Address" />
+                tools:text="Pharmacy Address"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/pharmacy_distance"
@@ -89,7 +91,8 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
-                tools:text="0.91 mi" />
+                tools:text="0.91 mi"
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/prescriptions_list"
@@ -106,6 +109,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
+                android:visibility="gone"
                 android:text="If your doctor is preparing additional information about your visit, you will be able to see it later in your Visit Summaries." />
 
             <Button
