--- a/MyHome/app/src/main/res/layout/fragment_medications.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medications.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:gravity="center_vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <android.support.v7.widget.CardView
             android:id="@+id/search_layout"
