--- a/MyHome/app/src/main/res/layout/navigation_activity.xml
+++ b/MyHome/app/src/main/res/layout/navigation_activity.xml
@@ -11,6 +11,7 @@
         android:layout_height="?attr/actionBarSize" />
 
     <View
+        android:id="@+id/toolbar_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:elevation="0.5dp"
