--- a/MyHome/app/src/main/res/layout/prescription_item.xml
+++ b/MyHome/app/src/main/res/layout/prescription_item.xml
@@ -3,11 +3,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp">
+
+    <RelativeLayout
+        android:id="@+id/prescription_name_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/prescription_name"
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginRight="105dp"
+            android:layout_toRightOf="@+id/prescription_date"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:text="Prescription: Test N GO Blood Glucose System"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/prescription_date"
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="right"
+            android:ellipsize="end"
+            android:gravity="right"
+            android:maxLines="1"
+            android:text="12/04/2017" />
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/prescription_name"
+        android:id="@+id/prescription_name1"
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,6 +50,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
+        android:visibility="gone"
         tools:text="Prescription: " />
 
     <TextView
@@ -22,7 +58,7 @@
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/prescription_name"
+        android:layout_below="@+id/prescription_name_layout"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
