--- a/MyHome/app/src/main/res/layout/fragment_pharmacy_list.xml
+++ b/MyHome/app/src/main/res/layout/fragment_pharmacy_list.xml
@@ -9,6 +9,7 @@
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:longClickable="false"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
