--- a/MyHome/app/src/main/res/layout/fragment_map_view.xml
+++ b/MyHome/app/src/main/res/layout/fragment_map_view.xml
@@ -5,11 +5,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/pharmacySearch"
+        style="@style/tradeGothicLTStd_Dynamic18"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:longClickable="false"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:drawableLeft="@drawable/ic_location_blue"
+        android:drawablePadding="8dp"
+        android:drawableRight="@mipmap/xblue"
+        android:hint="@string/pharmacy_search_hint"
+        android:imeOptions="actionSearch"
+        android:inputType="number"
+        android:maxLength="5"
+        android:maxLines="1"
+        android:shadowColor="@color/accent" />
+
     <fragment
         android:id="@+id/fragmentMapView"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/pharmacySearch"
         map:cameraZoom="15"
         map:mapType="normal"
         map:uiCompass="false"
@@ -33,5 +53,14 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/search_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:indeterminate="true"
         android:visibility="gone" />
 </RelativeLayout>
