--- a/MyHome/app/src/main/res/layout/fragment_medications.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medications.xml
@@ -48,16 +48,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/searchLayout"
-        android:layout_margin="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
         android:text="@string/medication_desc" />
+
+    <TextView
+        android:id="@+id/add_additional_medication"
+        style="@style/tradeGothicLTStd_Dynamic20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/medicationDesc"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="12dp"
+        android:text="@string/add_additional_medication"
+        android:textColor="@color/accent"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/no_medications_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/medicationDesc"
-        android:layout_alignRight="@id/medicationDesc"
-        android:layout_below="@id/medicationDesc">
+        android:layout_alignLeft="@id/add_additional_medication"
+        android:layout_alignRight="@id/add_additional_medication"
+        android:layout_below="@id/add_additional_medication">
 
         <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/no_medications_checkbox"
@@ -70,14 +87,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/not_on_any_medications" />
-
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/medicationsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/medicationDesc"
+        android:layout_below="@+id/no_medications_layout"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
