fixed below: user able to enter special characters in the intake screen - phone number and app crashes upon entering 4 letters

--- a/MyHome/app/src/main/res/layout/fragment_my_care_reason.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_reason.xml
@@ -76,10 +76,10 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:hint="@string/phone_number"
-                    android:inputType="textEmailAddress"
+                    android:inputType="number"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:text="2488263385" />
+                    tools:text="2488263385" />
 
             </android.support.design.widget.TextInputLayout>
 
