--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -89,7 +89,7 @@
                     android:layout_marginEnd="12dp"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="14dp"
-                    android:gravity="center"
+                    android:gravity="left"
                     android:lineSpacingExtra="2sp"
                     android:text="No appointments scheduled"
                     android:textColor="@color/db_gunmetal"
