--- a/MyHome/app/src/main/res/layout/fragment_medications.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medications.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:background="@color/white"
-            android:elevation="8dp"
+            android:elevation="22dp"
             android:visibility="visible">
 
             <EditText
@@ -59,10 +59,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/medicationDesc"
-        android:layout_centerHorizontal="true"
+        android:gravity="left"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="27dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
+        android:layout_marginLeft="32dp"
         android:paddingBottom="12dp"
         android:text="@string/add_additional_medication"
         android:textColor="@color/accent"
@@ -89,11 +89,18 @@
             android:text="@string/not_on_any_medications" />
     </LinearLayout>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/no_medications_layout"
+        android:background="@color/db_light_grey" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/medicationsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/no_medications_layout"
+        android:layout_below="@+id/divider"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
