Added Slot1 to environment

--- a/MyHome/app/src/main/res/values/string_arrays.xml
+++ b/MyHome/app/src/main/res/values/string_arrays.xml
@@ -86,6 +86,7 @@
     <!--States for Profile Edit - Prefer Not To Say isn't working currently-->
     <string-array name="build_env">
         <item>Dev</item>
+        <item>Slot1</item>
         <item>Stage</item>
         <item>Prod</item>
         <!--<item>Prefer Not To Say</item>-->
