--- a/MyHome/app/src/main/res/layout/visit_feedback.xml
+++ b/MyHome/app/src/main/res/layout/visit_feedback.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/rate_provider"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:stepSize="1.0"
                 android:layout_marginTop="16dp" />
 
             <TextView
@@ -41,6 +42,7 @@
                 android:id="@+id/rate_experience"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:stepSize="1.0"
                 android:layout_marginTop="16dp" />
 
             <TextView
