"Appointment types" string is changed to "Please choose an appointment type" to match up with iOS (updated upon QA's request)

--- a/MyHome/app/src/main/res/layout/book_select_status.xml
+++ b/MyHome/app/src/main/res/layout/book_select_status.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Appointment types" />
+        android:text="@string/appointment_types" />
 
     <LinearLayout
         android:id="@+id/appointment_type_layout"
